# DS3_DS4_Pairer_Win

./: CMakeLists.txt  README.md  gui_sixaxispairer.c  list_hid.c  pair_osx.c  pair_sixaxis_win.c  sixaxispairer_gui.rc
